--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>    
+    <main>
+        <header>
+            <article>
+                <h2>Artigo 01</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi explicabo id officia numquam quis, ipsum maiores non blanditiis perspiciatis, iste voluptatum odit? Eaque dolores ipsa hic, quidem dolore veritatis assumenda?</p>
+            </article>
+            <article>
+                <h2>Artigo 02</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis, illo rerum recusandae totam impedit modi autem consequatur sit asperiores expedita architecto quod qui nostrum fugit! Laborum cupiditate maxime assumenda exercitationem.</p>
+            </article>
+        </header>
+    </main>
 </body>
 </html>
